--- a/css/style.css
+++ b/css/style.css
@@ -301,6 +301,7 @@ figcaption {
 	top: 210px;
 	-webkit-transform: rotate(-90deg);
 	   -moz-transform: rotate(-90deg);
+	    -ms-transform: rotate(-90deg);
 		 -o-transform: rotate(-90deg);
 			transform: rotate(-90deg);
 }
@@ -340,6 +341,7 @@ label .text {
 	        border-radius: 50px;
 	-webkit-box-shadow: 0px 0px 2px rgba(0,0,0,0.65);
 	   -moz-box-shadow: 0px 0px 2px rgba(0,0,0,0.65);
+	    -ms-box-shadow: 0px 0px 2px rgba(0,0,0,0.65);
 	     -o-box-shadow: 0px 0px 2px rgba(0,0,0,0.65);
 	        box-shadow: 0px 0px 2px rgba(0,0,0,0.65);
 	
@@ -355,6 +357,7 @@ label .text {
 	
 	-webkit-box-shadow: 0px 0px 1px rgba(0,0,0,0.65);
 	   -moz-box-shadow: 0px 0px 1px rgba(0,0,0,0.65);
+	    -ms-box-shadow: 0px 0px 1px rgba(0,0,0,0.65);
 	     -o-box-shadow: 0px 0px 1px rgba(0,0,0,0.65);
 	        box-shadow: 0px 0px 1px rgba(0,0,0,0.65);
 	
@@ -373,7 +376,7 @@ label .text {
 #box {
     width: 100px;
     height: 100px;
-	background: #7C771D url('../images/test-box.png') no-repeat center center;
+	background: #7A751B url('../images/test-box.png') no-repeat center center;
     position: relative;
 	margin-top: 3px;
     left: 0px;
@@ -431,6 +434,7 @@ label .text {
 	        border-radius: 50px;
 	-webkit-box-shadow: 0px 0px 2px rgba(0,0,0,0.65);
 	   -moz-box-shadow: 0px 0px 2px rgba(0,0,0,0.65);
+	    -ms-box-shadow: 0px 0px 2px rgba(0,0,0,0.65);
 	     -o-box-shadow: 0px 0px 2px rgba(0,0,0,0.65);
 	        box-shadow: 0px 0px 2px rgba(0,0,0,0.65);
 	
@@ -451,6 +455,7 @@ label .text {
 	
 	-webkit-box-shadow: 0px 0px 1px rgba(0,0,0,0.65);
 	   -moz-box-shadow: 0px 0px 1px rgba(0,0,0,0.65);
+	    -ms-box-shadow: 0px 0px 1px rgba(0,0,0,0.65);
 	     -o-box-shadow: 0px 0px 1px rgba(0,0,0,0.65);
 	        box-shadow: 0px 0px 1px rgba(0,0,0,0.65);
 	
